fix: Fixed z-index for header and fixed search input

--- a/front/css/style.css
+++ b/front/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 :root {
@@ -716,6 +715,7 @@
   width: 100vw;
   left: 0;
   top: 0;
+  z-index: 200;
 }
 .header__image {
   padding: 140px 0 110px;
@@ -1373,11 +1373,6 @@
     display: none;
   }
 }
-/* 
-1. Сделать свайпом
-2. Сделать точки, вместо картинок
-3. Точки + стрелки
-*/
 .search-field {
   width: 479px;
   height: 63px;
@@ -1489,6 +1484,7 @@
   width: 100vw;
   left: 0;
   top: 0;
+  z-index: 200;
 }
 .header-info__image {
   padding: 140px 0 110px;
