--- a/front/scss/components/_header.scss
+++ b/front/scss/components/_header.scss
@@ -12,6 +12,7 @@
         width: 100vw;
         left: 0;
         top: 0;
+        z-index: 200;
     }
     &__image {
         padding: 140px 0 110px;
